tests/golden/type_errors/generic_lambda_monomorphic_assignment.cd
let identity: fun(number): number = fun<T>(value) { return value; };
