tests/golden/type_errors/generic_lambda_monomorphic_assignment.err
Type error at 1:5: cannot assign generic function to monomorphic function type
  let identity: fun(number): number = fun<T>(value) { return value; };
      ^
